--- a/src/Components/SignUpComp/SignUpComp.css
+++ b/src/Components/SignUpComp/SignUpComp.css
@@ -55,6 +55,7 @@
   background-color: rgb(255, 255, 255);
   color: #ff642c;
   cursor: pointer;
+  margin-top: -12px;
 }
 
 @media screen and (max-width: 1024px) {
