--- a/src/Components/SignUpComp/SignUpComp.scss
+++ b/src/Components/SignUpComp/SignUpComp.scss
@@ -60,6 +60,7 @@
                 background-color: rgb(255, 255, 255);
                 color: #ff642c;
                 cursor: pointer;
+                margin-top: -12px;
             }
         }
     }
