--- a/src/Components/UserComp/UserComp.css
+++ b/src/Components/UserComp/UserComp.css
@@ -36,6 +36,7 @@
   font-size: x-large;
 }
 .userContainer .detailsContainerMain {
+  margin-bottom: 128px;
   width: 100%;
   border: 1px solid rgb(204, 204, 204);
 }
@@ -45,6 +46,9 @@
 .userContainer .detailsContainerMain .detailsContentContainer .detailsHeader {
   display: flex;
   justify-content: space-between;
+}
+.userContainer .detailsContainerMain .detailsContentContainer .detailsHeader .logoutBtn {
+  border: 1px solid #313131;
 }
 .userContainer .detailsContainerMain .detailsContentContainer .detailsHeader button {
   background-color: #ffffff;
@@ -56,10 +60,111 @@
   font-weight: 600;
   cursor: pointer;
 }
+.userContainer .detailsContainerMain .detailsContentContainer .userAddressContainer {
+  border: 1px solid #c7c7c7;
+  padding: 10px;
+  margin-top: 8px;
+}
+.userContainer .detailsContainerMain .detailsContentContainer .userAddressContainer .userAddressMain {
+  width: 90%;
+}
+.userContainer .detailsContainerMain .detailsContentContainer .userAddressContainer .userAddressMain .userName {
+  display: flex;
+  align-items: center;
+  margin-top: -12px;
+}
+.userContainer .detailsContainerMain .detailsContentContainer .userAddressContainer .userAddressMain .userName p {
+  margin-left: 12px;
+}
+.userContainer .detailsContainerMain .detailsContentContainer .userAddressContainer .userAddressMain .userAddress {
+  font-size: 13px;
+  margin-top: -8px;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  margin-top: -32px;
+}
+.userContainer .detailsContainerMain .detailsContentContainer .userAddressContainer .userAddressMain .userAddress p {
+  margin-left: 12px;
+}
+.userContainer .detailsContainerMain .detailsContentContainer .userAddressContainer .userAddressMain .userPhone {
+  font-size: 13px;
+  margin-top: -8px;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  margin-top: -32px;
+}
+.userContainer .detailsContainerMain .detailsContentContainer .userAddressContainer .userAddressMain .userPhone p {
+  margin-left: 12px;
+}
+.userContainer .detailsContainerMain .detailsContentContainer .userAddressContainer .userAddressMain .userLandmark {
+  font-size: 13px;
+  margin-top: -8px;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  margin-top: -32px;
+}
+.userContainer .detailsContainerMain .detailsContentContainer .userAddressContainer .userAddressMain .userLandmark p {
+  margin-left: 12px;
+}
+.userContainer .detailsContainerMain .detailsContentContainer .userAddressContainer .userAddressMain .userStreet {
+  font-size: 13px;
+  margin-top: -8px;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  margin-top: -32px;
+}
+.userContainer .detailsContainerMain .detailsContentContainer .userAddressContainer .userAddressMain .userStreet p {
+  margin-left: 12px;
+}
+.userContainer .detailsContainerMain .detailsContentContainer .userAddressContainer .userInteractiveBtns {
+  display: flex;
+}
+.userContainer .detailsContainerMain .detailsContentContainer .userAddressContainer .userInteractiveBtns .editBtn {
+  padding: 8px;
+  border: 1px solid #00A896;
+  display: flex;
+  align-items: center;
+}
+.userContainer .detailsContainerMain .detailsContentContainer .userAddressContainer .userInteractiveBtns .editBtn .editLogo {
+  font-size: 20px;
+}
+.userContainer .detailsContainerMain .detailsContentContainer .userAddressContainer .userInteractiveBtns .editBtn:hover {
+  background-color: #00A896;
+  color: #ffffff;
+}
+.userContainer .detailsContainerMain .detailsContentContainer .userAddressContainer .userInteractiveBtns .deleteBtn {
+  padding: 8px;
+  border: 1px solid red;
+  margin-left: 8px;
+  background-color: #ffffff;
+  color: red;
+  display: flex;
+  align-items: center;
+}
+.userContainer .detailsContainerMain .detailsContentContainer .userAddressContainer .userInteractiveBtns .deleteBtn .deleteLogo {
+  font-size: 20px;
+}
+.userContainer .detailsContainerMain .detailsContentContainer .userAddressContainer .userInteractiveBtns .deleteBtn:hover {
+  background-color: red;
+  color: #ffffff;
+  cursor: pointer;
+}
 .userContainer .detailsContainerMain .titleText {
   font-size: 20px;
   margin-top: 8px;
+  font-weight: 500;
 }
 .userContainer .detailsContainerMain label {
   font-size: 13px;
+  color: #ababab;
+}
+.userContainer .editBtn {
+  background-color: #ffffff;
+  border: none;
+  color: #00A896;
+  cursor: pointer;
 }/*# sourceMappingURL=UserComp.css.map */
