--- a/src/Components/UserComp/UserComp.scss
+++ b/src/Components/UserComp/UserComp.scss
@@ -46,6 +46,7 @@
     }
 
     .detailsContainerMain{
+        margin-bottom: 128px;
         width: 100%;
         border: 1px solid rgb(204, 204, 204);
 
@@ -55,6 +56,10 @@
             .detailsHeader{
                 display: flex;
                 justify-content: space-between;
+
+                .logoutBtn{
+                    border: 1px solid $textColor;
+                }
 
                 button{
                     background-color: $secondaryColor;
@@ -68,19 +73,148 @@
                 }
                 
             }
+
+            .userAddressContainer{
+                border: 1px solid #c7c7c7;
+                padding: 10px;
+                margin-top: 8px;
+
+                .userAddressMain{
+
+                    width: 90%;
+                   
+                    .userName{
+                        // font-size: map-get($fontSize, small);
+                        display: flex;
+                        align-items: center;
+                        margin-top: -12px;
+                        p{
+                            margin-left: 12px;
+                        }
+                        
+                    }
+
+                    .userAddress{
+                        font-size: map-get($fontSize, small);
+                        margin-top: -8px;
+                        font-weight: 500;
+                        display: flex;
+                        align-items: center;
+                        margin-top: -32px;
+
+                        p{
+                            margin-left: 12px;
+                        }
+                    }
+
+                    .userPhone{
+                        font-size: map-get($fontSize, small);
+
+                        margin-top: -8px;
+                        font-weight: 500;
+                        display: flex;
+                        align-items: center;
+                        margin-top: -32px;
+
+                        p{
+                            margin-left: 12px;
+                        }
+                    }
+
+                    .userLandmark{
+                        font-size: map-get($fontSize, small);
+
+                        margin-top: -8px;
+                        font-weight: 500;
+                        display: flex;
+                        align-items: center;
+                        margin-top: -32px;
+
+                        p{
+                            margin-left: 12px;
+                        }
+                    }
+
+                    .userStreet{
+                        font-size: map-get($fontSize, small);
+
+                        margin-top: -8px;
+                        font-weight: 500;
+                        display: flex;
+                        align-items: center;
+                        margin-top: -32px;
+
+                        p{
+                            margin-left: 12px;
+                        }
+                    }
+
+                }
+
+                .userInteractiveBtns{
+                    display: flex;
+                    .editBtn{
+                        padding: 8px;
+                        border: 1px solid $primaryColor;
+                        display: flex;
+                        align-items: center;
+
+                        .editLogo{
+                            font-size: map-get($fontSize, medium );
+                        }
+                    
+                        &:hover{
+                            background-color: $primaryColor;
+                            color: $secondaryColor;
+
+                        }
+                    }
+
+                    .deleteBtn{
+                        padding: 8px;
+                        border: 1px solid red;
+                        margin-left: 8px;
+                        background-color: $secondaryColor;
+                        color: red;
+                        display: flex;
+                        align-items: center;
+
+                        .deleteLogo{
+                            font-size: map-get($fontSize, medium );
+                        }
+
+                        &:hover{
+                            background-color: red;
+                            color: $secondaryColor;
+                            cursor: pointer;
+                        }
+                    }
+                }
+
+
+            }
         }
 
         .titleText{
             font-size: map-get($fontSize, medium );
             margin-top: 8px;
+            font-weight: 500;
         }
 
         label{
             font-size: map-get($fontSize, small );
+            color: #ababab;
         }
         
     }
 
+    .editBtn{
+        background-color: $secondaryColor;
+        border: none;
+        color: $primaryColor;
+        cursor: pointer;
+
+    }
    
 
 }
