--- a/src/Components/ProductDetails/ProductDetails.css
+++ b/src/Components/ProductDetails/ProductDetails.css
@@ -25,8 +25,13 @@
   padding: 12px;
   border: none;
   background-color: #00A896;
+  display: flex;
+  align-items: center;
 }
-.productDetailsContainer .productImageAndDetailsContainer .buttonsContainer .productOrderNow:hover {
+.productDetailsContainer .productImageAndDetailsContainer .buttonsContainer .productOrderNow button {
+  background-color: #00A896;
+  border: none;
+  width: 100%;
   cursor: pointer;
 }
 .productDetailsContainer .productImageAndDetailsContainer .buttonsContainer .productAddToCart {
@@ -150,8 +155,6 @@
     padding: 12px;
     border: none;
     background-color: #00A896;
-  }
-  .productDetailsContainer .productImageAndDetailsContainer .buttonsContainer .productOrderNow:hover {
     cursor: pointer;
   }
   .productDetailsContainer .productImageAndDetailsContainer .buttonsContainer .productAddToCart {
