--- a/src/Components/UserComp/UserComp.scss
+++ b/src/Components/UserComp/UserComp.scss
@@ -45,6 +45,13 @@
         }
     }
 
+    /* Add a class for the selected button */
+.tabButton.selected {
+    background-color: #E8E8E8; /* Set your desired background color for the selected button */
+    /* Add any other styles for the selected button */
+  }
+  
+
     .detailsContainerMain{
         margin-bottom: 128px;
         width: 100%;
@@ -60,6 +67,11 @@
                 .logoutBtn{
                     border: 1px solid $textColor;
                     height: 40px;
+
+                    &:hover{
+                        background-color: $textColor;
+                        color: $secondaryColor;
+                    }
                 }
 
                 button{
