updated 13/12/23 Whatcart Front End Completed

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -39,6 +39,7 @@
   margin-right: 5px;
   padding: 10px;
   width: 100px;
+  height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -99,5 +100,21 @@
     border: none;
     width: 50px;
     outline: none;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .logButton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 50px;
+    text-align: center;
+  }
+  .logButton .logIcon {
+    margin-left: 0px !important;
+  }
+  .logButton p {
+    display: none;
   }
 }/*# sourceMappingURL=Navbar.css.map */
