--- a/src/Components/UserComp/UserComp.scss
+++ b/src/Components/UserComp/UserComp.scss
@@ -67,7 +67,7 @@
                 .logoutBtn{
                     border: 1px solid $textColor;
                     height: 40px;
-
+                    width: 100px;
                     &:hover{
                         background-color: $textColor;
                         color: $secondaryColor;
