--- a/src/Components/UserPayments/UserPayments.css
+++ b/src/Components/UserPayments/UserPayments.css
@@ -1,1 +1,62 @@
-/*# sourceMappingURL=UserPayments.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Fanwood+Text:ital@0;1&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: left;
+  padding: 20px;
+}
+form h3 {
+  width: 100%;
+  margin-left: 20px;
+  text-align: left;
+}
+form p {
+  width: 100%;
+  margin-left: 20px;
+  text-align: left;
+  margin-top: -10px;
+}
+form .radio {
+  border: 1px solid #313131;
+  padding: 10px;
+  font-size: 28px;
+  justify-content: space-around;
+  align-items: center;
+  display: flex;
+  margin-top: 12px;
+  width: 60%;
+}
+
+@media screen and (max-width: 425px) {
+  form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+    padding: 20px;
+  }
+  form h3 {
+    width: 100%;
+    margin-left: 20px;
+    text-align: left;
+  }
+  form p {
+    width: 100%;
+    margin-left: 20px;
+    text-align: left;
+    margin-top: -10px;
+  }
+  form .radio {
+    border: 1px solid #313131;
+    padding: 10px;
+    font-size: 28px;
+    justify-content: space-around;
+    align-items: center;
+    display: flex;
+    margin-top: 12px;
+    width: 90%;
+  }
+}/*# sourceMappingURL=UserPayments.css.map */
