updated 13/12/23 Whatcart Front End Completed

--- a/src/Components/UserPayments/UserPayments.css
+++ b/src/Components/UserPayments/UserPayments.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Fanwood+Text:ital@0;1&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
-form {
+.paymentMethod {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -7,18 +7,18 @@ form {
   text-align: left;
   padding: 20px;
 }
-form h3 {
+.paymentMethod h3 {
   width: 100%;
   margin-left: 20px;
   text-align: left;
 }
-form p {
+.paymentMethod p {
   width: 100%;
   margin-left: 20px;
   text-align: left;
   margin-top: -10px;
 }
-form .radio {
+.paymentMethod .radio {
   border: 1px solid #313131;
   padding: 10px;
   font-size: 28px;
