--- a/src/Components/PaymentOptions/PaymentOptions.css
+++ b/src/Components/PaymentOptions/PaymentOptions.css
@@ -2,6 +2,7 @@
 .paymentOtionsContainer {
   margin-top: 128px;
   padding: 0 300px;
+  margin-bottom: 128px;
 }
 .paymentOtionsContainer .payNowBtn {
   width: 100%;
@@ -23,6 +24,7 @@
   background-color: #f0f0f0;
   border-radius: 5px;
   display: block;
+  width: 100%;
 }
 
 .paymentMethod {
@@ -31,6 +33,7 @@
 }
 .paymentMethod h5 {
   border-bottom: 1px solid black;
+  width: 100%;
 }
 
 @media screen and (max-width: 1024px) {
