--- a/src/Components/UserPayments/UserPayments.scss
+++ b/src/Components/UserPayments/UserPayments.scss
@@ -73,7 +73,7 @@
             align-items: center;
             display: flex;
             margin-top: 12px;
-            width: 90%;
+            width: 100% !important;
         }
     }
 }
